# QDevKit

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json
include/: global.h  header.h  pages.h  router.h  simple.h  window.h
include/logical/: git.h
project/: ProjectLog.md
src/: global.cpp  main.cpp  router.cpp  window.cpp
src/logical/: git.cpp
src/pages/: git_page.cpp  main_page.cpp
